plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'

}

group = 'com.gbh'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// jpa
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// lombok
	annotationProcessor 'org.projectlombok:lombok'
	compileOnly 'org.projectlombok:lombok'

	// mysql
	runtimeOnly 'com.mysql:mysql-connector-j'

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// spring
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	// jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'


	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	// mapper
	implementation 'org.modelmapper:modelmapper:3.1.0'

	// WebClient
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// Google API Client 라이브러리 (Gmail API 포함)
	implementation 'com.google.api-client:google-api-client:2.7.2'
	// Google OAuth 2.0 라이브러리
	implementation 'com.google.auth:google-auth-library-oauth2-http:1.20.0'
	// Gmail API 라이브러리
	implementation 'com.google.apis:google-api-services-gmail:v1-rev110-1.25.0'

	// Google의 JacksonFactory (Jackson을 Google API와 함께 사용하려면 필요)
	implementation 'com.google.http-client:google-http-client-jackson2:1.43.3'

	// firebase
	implementation 'com.google.firebase:firebase-admin:9.1.1'

	// AWS S3
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.510'

	// Spring Actuator
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// Prometheus
	implementation 'io.micrometer:micrometer-registry-prometheus'

	// 크롤링 라이브러리
	// Selenium WebDriver
	implementation 'org.seleniumhq.selenium:selenium-java:4.19.1'

	// WebDriver Manager (자동 드라이버 다운로드)
	implementation 'io.github.bonigarcia:webdrivermanager:5.8.0'

}

tasks.named('test') {
	useJUnitPlatform()
}
